# Prost

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  GLADE+_HyperLeda_notes.txt  Jones+18_Alexprob.csv  Jones+18_wrongGHOST.csv  LICENSE  README.md  ZTFBTS_Alexprob.csv  ZTFBTS_TransientTable_Associations_FirstPass.csv  ZTFBTS_TransientTable_Associations_SecondPass_GLADEFirst.csv  all.pkl  associate.py  demo.py  diagnose.py  ghost_comparison.py  gwgc.txt  helpers.py  helpers_scratch.py  photoz_helper.py  pyproject.toml  slsn_catalog_Alexprob_PccCompare.csv  slsne_hosts.txt
.github/workflows/: ci.yml  release.yml  smoke-test.yml
_readthedocs/html/: .buildinfo  genindex.html  index.html  notebooks.html  objects.inv  py-modindex.html  search.html  searchindex.js
_readthedocs/html/_modules/: index.html
_readthedocs/html/_modules/astro_prost/: associate.html  demo.html  diagnose.html  helpers.html  photoz_helpers.html
_readthedocs/html/_sources/autoapi/: index.rst.txt
_readthedocs/html/_sources/autoapi/astro_prost/: index.rst.txt
_readthedocs/html/_sources/autoapi/astro_prost/associate/: index.rst.txt
_readthedocs/html/_sources/autoapi/astro_prost/demo/: index.rst.txt
_readthedocs/html/_sources/autoapi/astro_prost/diagnose/: index.rst.txt
_readthedocs/html/_sources/autoapi/astro_prost/helpers/: index.rst.txt
_readthedocs/html/_static/: documentation_options.js
_readthedocs/html/autoapi/: index.html
_readthedocs/html/autoapi/astro_prost/: index.html
_readthedocs/html/autoapi/astro_prost/associate/: index.html
_readthedocs/html/autoapi/astro_prost/demo/: index.html
_readthedocs/html/autoapi/astro_prost/diagnose/: index.html
_readthedocs/html/autoapi/astro_prost/helpers/: index.html
_readthedocs/html/autoapi/astro_prost/photoz_helpers/: index.html
benchmarks/: asv.conf.json  benchmarks.py
docs/: conf.py  index.rst  notebooks.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree  notebooks.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/astro_prost/: index.doctree
docs/_build/doctrees/nbsphinx/notebooks/: associate.ipynb
docs/_build/doctrees/notebooks/: associate.doctree  intro_notebook.doctree
docs/notebooks/: associate.ipynb
src/: getMetadata.py
src/astro_prost/: __init__.py  _version.py  associate.py  demo.py  diagnose.py  helpers.py  photoz_helpers.py
src/astro_prost.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/astro_prost/data/: ZTFBTS_TransientTable.csv  ps1_metadata.pkl
src/prost.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_bigrun.py  test_decals.py  test_decals_dr10.py  test_decals_dr9.py  test_glade.py  test_ned_specz.py  test_ngc.py  test_noabsmagconditioning.py  test_noredshift.py  test_noredshiftconditioning.py  test_notransientredshift.py  test_panstarrs.py  test_panstarrs_dr1.py  test_panstarrs_dr2.py  test_panstarrs_shred.py  test_parallel.py  test_priorities.py  test_rsp.py  test_rsp_dp1.py  test_skymapper_association.py  test_skymapper_dr4.py
(+11 files in other folders)
